# etc.icp

./: .env  .env.development  .env.local  .env.production  .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  setupEnv.js
src/etc/: Cargo.toml  etc.old.did
src/etc/src/: lib.rs
src/frontend/: index.html
src/frontend/assets/: main.scss
src/frontend/r/: index.html
src/frontend/src/: App.tsx  CopyButton.tsx  Shortener.tsx  actor.js  index.tsx
